--- a/Project05_DataScience_NeighborhoodLocatorApplication/NeighborhoodLocatorApp.ipynb
+++ b/Project05_DataScience_NeighborhoodLocatorApplication/NeighborhoodLocatorApp.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "#### 1.2 Clear definition of business problem and potential audience\n",
     "\n",
-    "The business problem is to identify a neighborhood in Newyork ,USA with facilities similar to those being enjoyed in Toronto, Canada, NZ. The addresses of source (St Patrick street, Toronto) and target city (West Houston Street, Manhattan, NewYork)are given.However, the facilities that make the neighborhoods similar need to be identified based on location data.\n",
+    "The business problem is to identify a neighborhood in Newyork ,USA with facilities similar to those being enjoyed in Toronto, Canada. The addresses of source (St Patrick street, Toronto) and target city (West Houston Street, Manhattan, NewYork)are given.However, the facilities that make the neighborhoods similar need to be identified based on location data.\n",
     "\n",
     "Currently, I am solving this as a data science problem for my own purpose. But, this problem and its solution can be scaled for other people. This will be useful for people moving from one city to another city to select a favorite neighborhood in the target city. I am interested to develop an app later based on my solution. It should be able to have conditions based on my favorite amenities and desired location in target city similar to those being enjoyed in the current city.\n",
     "\n",
