--- a/Project05_DataScience_NeighborhoodLocatorApplication/NeighborhoodLocatorApp.ipynb
+++ b/Project05_DataScience_NeighborhoodLocatorApplication/NeighborhoodLocatorApp.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Neighborhood Locator App (Final Report)\n",
+    "# The Neighborhood Locator App \n",
     "\n",
     "### A Data science report created by Belvin Thomas\n",
     "\n",
