--- a/Project05_DataScience_NeighborhoodLocatorApplication/NeighborhoodLocatorApp.ipynb
+++ b/Project05_DataScience_NeighborhoodLocatorApplication/NeighborhoodLocatorApp.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The Neighborhood Locator App \n",
     "\n",
-    "### A Data science report created by Belvin Thomas\n",
+    "### A data science report created by Belvin Thomas\n",
     "\n",
     "\n",
     "## 1.\tIntroduction \n",
