--- a/Project08_MONAIBootcamp2021/2. MONAI Datasets and Caching.ipynb
+++ b/Project08_MONAIBootcamp2021/2. MONAI Datasets and Caching.ipynb
@@ -23,7 +23,8 @@
       "name": "2. MONAI Datasets and Caching.ipynb",
       "provenance": [],
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -65,13 +66,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MGMM8ShIS7VG"
+        "id": "MGMM8ShIS7VG",
+        "outputId": "1eee863d-4296-4e30-8809-5a20b3fcbe39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!pip install -qU \"monai[ignite, nibabel, torchvision, tqdm]==0.6.0\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 584 kB 3.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 221 kB 49.1 MB/s \n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
