--- a/notebooks/01_simple_agent.ipynb
+++ b/notebooks/01_simple_agent.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/btho733/Belvin-Personal_Projects/blob/master/notebooks/01_simple_agent.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "585792d2",
       "metadata": {
         "id": "585792d2"
@@ -106,11 +96,11 @@
       "execution_count": 7,
       "id": "97aa36f0",
       "metadata": {
-        "id": "97aa36f0",
-        "outputId": "aa7dd163-d58d-434c-b7fc-494c8f25273d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "97aa36f0",
+        "outputId": "aa7dd163-d58d-434c-b7fc-494c8f25273d"
       },
       "outputs": [
         {
@@ -140,14 +130,14 @@
       "source": [
         "# or\n",
         "\n",
-        "os.environ[\"WANDB_API_KEY\"] = \"bb2262a36ed933c2df63c1ecc3e761b03ebe3882\"\n",
-        "os.environ[\"EXA_API_KEY\"] = \"1613e9b2-2199-4b5a-abf7-d7f39e7bec29\"\n",
+        "os.environ[\"WANDB_API_KEY\"] = \"\"\n",
+        "os.environ[\"EXA_API_KEY\"] = \"\"\n",
         "\n",
         "# or colab secrets:\n",
         "\n",
-        "# from google.colab import userdata\n",
-        "# os.environ[\"WANDB_API_KEY\"] = userdata.get(\"WANDB_API_KEY\")\n",
-        "# os.environ[\"EXA_API_KEY\"] = userdata.get(\"EXA_API_KEY\")"
+        "from google.colab import userdata\n",
+        "os.environ[\"WANDB_API_KEY\"] = userdata.get(\"WANDB_API_KEY\")\n",
+        "os.environ[\"EXA_API_KEY\"] = userdata.get(\"EXA_API_KEY\")"
       ]
     },
     {
@@ -211,11 +201,11 @@
       "execution_count": 13,
       "id": "e70b57d9",
       "metadata": {
-        "id": "e70b57d9",
-        "outputId": "e51fe326-1c69-4aa0-c48f-29bb58fb5e2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e70b57d9",
+        "outputId": "e51fe326-1c69-4aa0-c48f-29bb58fb5e2c"
       },
       "outputs": [
         {
@@ -265,12 +255,12 @@
       "execution_count": 15,
       "id": "f9ec1b77",
       "metadata": {
-        "id": "f9ec1b77",
-        "outputId": "27dbeecc-13e4-4fb2-b0ab-75aae27192f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 596
-        }
+        },
+        "id": "f9ec1b77",
+        "outputId": "27dbeecc-13e4-4fb2-b0ab-75aae27192f5"
       },
       "outputs": [
         {
@@ -402,12 +392,12 @@
       "execution_count": 16,
       "id": "eb90b937",
       "metadata": {
-        "id": "eb90b937",
-        "outputId": "7b2351a6-cb6c-4e0c-ee00-da77b588744c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 795
-        }
+        },
+        "id": "eb90b937",
+        "outputId": "7b2351a6-cb6c-4e0c-ee00-da77b588744c"
       },
       "outputs": [
         {
@@ -593,11 +583,11 @@
       "execution_count": 18,
       "id": "a691123a",
       "metadata": {
-        "id": "a691123a",
-        "outputId": "08965d29-d88a-4860-df9b-6bfa5243ccc1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a691123a",
+        "outputId": "08965d29-d88a-4860-df9b-6bfa5243ccc1"
       },
       "outputs": [
         {
@@ -693,7 +683,10 @@
         "messages = [\n",
         "    {\"role\": \"system\", \"content\": \"You are a helpful assistant use tools to answer questions.\"},\n",
         "    {\"role\": \"user\", \"content\": \"My lucky numbers are 77 and 11. What is their sum?\"}]\n",
-        "response = call_model(model_name=MODEL_SMALL, messages=messages, tools=[tool_add_numbers_schema])\n",
+        "response = call_model(\n",
+        "    model_name=MODEL_SMALL,\n",
+        "    messages=messages,\n",
+        "    tools=[tool_add_numbers_schema])\n",
         "console.print(response)"
       ]
     },
@@ -1752,8 +1745,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "accelerator": "GPU"
   },
